fixed wrapping and dropdown in header

--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -9,20 +9,23 @@ header{
     background-color: rgb(190, 190, 190);
     height: 100px;
 }
-header .container{
-    padding-top: 25px;
+header .container-fluid{
+    padding: 25px;
 }
  
-header .container h1{
+header .container-fluid h1{
     font-family: "bebas neue";
 }
 
 header #menu{
     width: 50%;
+    flex-wrap: nowrap;
 }
 
+
+
 @media only screen and (max-width:768px){
-    #navmobile{
+    #navmobile li{
         display: none;
     }
 }
